# docs/swagger.json
@@ -71,11 +71,11 @@
                 "parameters": [
                     {
                         "description": "Refresh",
-                        "name": "refreshS",
+                        "name": "models.RefreshS",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.refreshS"
+                            "$ref": "#/definitions/models.RefreshS"
                         }
                     }
                 ],
@@ -83,7 +83,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handlers.authResponse"
+                            "$ref": "#/definitions/models.AuthResponse"
                         }
                     },
                     "400": {
@@ -118,11 +118,11 @@
                 "parameters": [
                     {
                         "description": "Sign In",
-                        "name": "signIn",
+                        "name": "models.SignIn",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.signIn"
+                            "$ref": "#/definitions/models.SignIn"
                         }
                     }
                 ],
@@ -130,7 +130,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handlers.authResponse"
+                            "$ref": "#/definitions/models.AuthResponse"
                         }
                     },
                     "400": {
@@ -165,11 +165,11 @@
                 "parameters": [
                     {
                         "description": "Sign Up",
-                        "name": "signUp",
+                        "name": "models.SignUp",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.signUp"
+                            "$ref": "#/definitions/models.SignUp"
                         }
                     }
                 ],
@@ -177,57 +177,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handlers.authResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/multiple/race-track/{link}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "This endpoint is used to join a race track. It upgrades the HTTP connection to a WebSocket connection. The server sends messages with the current race status to the client over the WebSocket connection.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "multiple"
-                ],
-                "summary": "Join a race track",
-                "operationId": "race-track",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Race Link",
-                        "name": "link",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.RacerM"
+                            "$ref": "#/definitions/models.AuthResponse"
                         }
                     },
                     "400": {
@@ -267,11 +217,11 @@
                 "parameters": [
                     {
                         "description": "Wpm calculation",
-                        "name": "midRace",
+                        "name": "models.CountWpm",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.midRace"
+                            "$ref": "#/definitions/models.CountWpm"
                         }
                     }
                 ],
@@ -279,7 +229,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/handlers.speed"
+                            "$ref": "#/definitions/models.Speed"
                         }
                     },
                     "400": {
@@ -325,7 +275,7 @@
                 "parameters": [
                     {
                         "description": "End Race",
-                        "name": "reqEndSingle",
+                        "name": "models.ReqEndSingle",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -407,17 +357,100 @@
                     }
                 }
             }
-        }
-    },
-    "definitions": {
-        "handlers.authResponse": {
-            "type": "object",
-            "properties": {
-                "access": {
-                    "type": "string"
+        },
+        "/track/link": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "This endpoint is used to create a racetrack. It generates a unique link for the racetrack and returns it to the user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "multiple"
+                ],
+                "summary": "Create a racetrack",
+                "operationId": "create-racetrack",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.LinkCreation"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    }
                 }
             }
         },
+        "/track/race/{link}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "This endpoint is used to join a racetrack. It upgrades the HTTP connection to a WebSocket connection. The server sends messages with the current race status to the client over the WebSocket connection.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "multiple"
+                ],
+                "summary": "Join a racetrack",
+                "operationId": "racetrack",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Race Link",
+                        "name": "link",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.RacerM"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.errorResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
         "handlers.errorResponse": {
             "type": "object",
             "properties": {
@@ -426,7 +459,15 @@
                 }
             }
         },
-        "handlers.midRace": {
+        "models.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "access": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CountWpm": {
             "type": "object",
             "properties": {
                 "duration": {
@@ -437,50 +478,14 @@
                 }
             }
         },
-        "handlers.refreshS": {
+        "models.LinkCreation": {
             "type": "object",
             "properties": {
-                "fingerprint": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.signIn": {
-            "type": "object",
-            "properties": {
-                "email": {
+                "content": {
                     "type": "string"
                 },
-                "fingerprint": {
+                "link": {
                     "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.signUp": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "fingerprint": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.speed": {
-            "type": "object",
-            "properties": {
-                "wpm": {
-                    "type": "integer"
                 }
             }
         },
@@ -508,6 +513,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RefreshS": {
+            "type": "object",
+            "properties": {
+                "fingerprint": {
                     "type": "string"
                 }
             }
@@ -540,6 +553,37 @@
                 }
             }
         },
+        "models.SignIn": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "fingerprint": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SignUp": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "fingerprint": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.SingleResponse": {
             "type": "object",
             "properties": {
@@ -548,6 +592,14 @@
                 },
                 "text": {
                     "$ref": "#/definitions/models.TextInfo"
+                }
+            }
+        },
+        "models.Speed": {
+            "type": "object",
+            "properties": {
+                "wpm": {
+                    "type": "integer"
                 }
             }
         },
