# internal/handlers/errors.go
@@ -11,5 +11,5 @@ type errorResponse struct {
 
 func newErrorResponse(c *gin.Context, statusCode int, message string) {
 	log.Println("error in the handler layer")
-	c.AbortWithStatusJSON(statusCode, errorResponse{message})
+	c.AbortWithStatusJSON(statusCode, errorResponse{Message: message})
 }
