# internal/handlers/routes.go
@@ -2,6 +2,8 @@ package handlers
 
 import (
 	_ "github.com/MamushevArup/typeracer/docs"
+	"github.com/MamushevArup/typeracer/internal/middleware/auth/http/access"
+	"github.com/MamushevArup/typeracer/internal/middleware/auth/http/endpoint"
 	validation "github.com/MamushevArup/typeracer/internal/middleware/auth/http/token-validation"
 	validationWs "github.com/MamushevArup/typeracer/internal/middleware/auth/ws/token-ws"
 	"github.com/gin-contrib/cors"
@@ -20,11 +22,23 @@ func (h *handler) InitRoutes() *gin.Engine {
 		AllowCredentials: true,
 	}))
 
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
 	router.Use(validation.TokenInspector())
 
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	contribute := router.Group("/content")
+	{
+		contribute.POST("/contribute", endpoint.Access(h.service), h.contribute)
+	}
+
+	moder := router.Group("/admin")
+	{
+		moder.POST("/sign-in", h.adminSignIn)
+		moder.POST("/refresh", h.adminRefresh)
+	}
+
 	sgl := router.Group("/single")
+	sgl.Use(access.OnlyGuestOrRacer())
 	{
 		sgl.GET("/race", h.startRace)
 		sgl.POST("/end-race", h.endRace)
@@ -35,6 +49,7 @@ func (h *handler) InitRoutes() *gin.Engine {
 	//router.GET("/moderation/:id", h.moderation)
 
 	auth := router.Group("/api/auth")
+
 	{
 		auth.POST("/sign-in", h.signIn)
 		auth.POST("/sign-up", h.signUp)
@@ -44,11 +59,11 @@ func (h *handler) InitRoutes() *gin.Engine {
 	// this route stands for create racetrack and start a multiple race
 	mlt := router.Group("/track")
 	mlt.Use(validationWs.TokenVerifier())
+	mlt.Use(access.OnlyGuestOrRacer())
 	{
 		mlt.POST("/link", h.createLink)
-		// this racetrack will look like this. /race/link?t=<access token>
+		// this racetrack will look like this. /race/link?t=<endpoint token>
 		mlt.GET("/race/:link", h.raceTrack)
-		mlt.DELETE("/race/finish/:id")
 	}
 
 	return router
